package com.bankmgmt.model;

public enum AccountStatus {
    ACTIVE,
    FROZEN,
    CLOSED
}
