package com.bankmgmt.model;

public enum Role {
    ADMIN,
    USER
}
