package com.bankmgmt.model;

public enum TransactionType {
    DEPOSIT,
    WITHDRAW,
    TRANSFER
}
